--- a/03-css/style.css
+++ b/03-css/style.css
@@ -6,3 +6,16 @@
 body{
     background-color: seashell;
 }
+
+/*
+ navbar
+*/
+.navbar{
+    display: flex;
+    justify-content: space-between;
+}
+
+.link{
+    display: flex;
+    justify-content: flex-end;
+}
