--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,22 +1,32 @@
-/*
-
-*/
-
-
-body{
-    background-image:url(img/fondo.jpg)
-
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-/*
- navbar
-*/
 .navbar{
+    height: 80px;
+    width: 1152;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+}
+.navbar__logo{
+   height: 100%;
 }
 
-.link{
+.navbar__links{
+    height: 100%;
+    width: 200px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.navbar__profile{
+    height: 300px;
+    width: 1152px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start,
 }
