--- a/06-sitio-porfolio/style.css
+++ b/06-sitio-porfolio/style.css
@@ -39,3 +39,22 @@
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(29, 29, 124);
 }
+/* hero */
+
+.hero{
+    height: 450px;
+    width: 1200px; 
+    display: flex;
+
+}
+
+.hero__photo{
+    background-color: darkgreen;
+    width: 40%;
+    height: 100%;
+}
+.hero__text{
+    background-color: darkorchid;
+    width: 60%;
+    height: 100%;
+}
