quinto commit: diseño responsivo

--- a/06-sitio-porfolio/style.css
+++ b/06-sitio-porfolio/style.css
@@ -104,5 +104,10 @@
     color: white;
     text-transform: uppercase;
     border: 0px solid white;
-    border-radius: 10px;
-}
+    border-radius: 10px; 
+    
+@media screen and (max-width:1200px) {
+     body{
+         background-color: yellow;
+     }
+}  
