--- a/06-sitio-porfolio/style.css
+++ b/06-sitio-porfolio/style.css
@@ -105,9 +105,9 @@
     text-transform: uppercase;
     border: 0px solid white;
     border-radius: 10px;
-
-    @media screen and (max-width:700px) {
-        body {
-            background-color: yellow;
-        }
+}
+    
+    
+    @media screen and (max-width:1200px) {
+        body {background-color: yellow; }
     }
